# adum

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  rust-builds.yml
src/: download.rs  main.rs
tests/: client.rs
