[package]
name = "adum"
version = "0.2.0"
authors = ["Matt Gathu <mattgathu@gmail.com>"]
description = "A minimal file downloader"
documentation = "https://github.com/dvgamerr/adum"
homepage = "https://github.com/dvgamerr/adum"
repository = "https://github.com/dvgamerr/adum"
readme = "README.md"
keywords = ["http", "client", "cli", "file", "download"]
categories = ["web-programming::http-client", "command-line-utilities", "network-programming"]
license = "MIT"
edition = "2018"

[dependencies]
indicatif = "0.15.0"
console = "0.15.2"
clap = "2.33.2"
ftp = "3.0.1"
threadpool = "1.8.1"
failure = { version = "0.1.8", features = [] }
url = "2.3.1"
reqwest = {version = "0.11.12", features = ["blocking"]}
[dev-dependencies]
assert_cmd = "0.11"
tiny_http = "0.12.0"
assert_fs = "1.0"
predicates = "2.1"
